# jocat

./: Cargo.toml  README.md
assets/: level.json
assets/prefabs/: background.ron  jocrap.ron  player.ron  throwable_log.ron  throwable_watermelon.ron  throwable_wheat.ron
assets/sprites/: jocat_cut.json  jocrap_bop.json
config/: bindings.ron
src/: animation.rs  audio.rs  components.rs  input.rs  main.rs  state.rs
src/prefabs/: mod.rs  npcs.rs  player.rs  scene.rs  throwns.rs
src/resources/: level.rs  mod.rs  thrown_set.rs  timer.rs
src/state/: game.rs  loading.rs
src/systems/: input.rs  mod.rs  physics.rs  timing.rs
